# workwithme

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CREDITS.md  DEPLOYMENT_READINESS.md  LICENSE  PHASE_3_SUMMARY.md  README.md  RELEASE.md  RELEASING.md  SECURITY.md  TESTING.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.sidecar.json  vite.config.ts  workwithme.settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.pi/agents/: planner.md  reviewer.md  scout.md  worker.md
docs/: SECURITY_REVIEW.md
docs/architecture/: sandbox-runtime.md
docs/plans/: 2026-03-13-bug-fixes-design.md  2026-03-13-bug-fixes.md  2026-03-13-high-impact-improvements-design.md  2026-03-13-high-impact-improvements.md  2026-03-13-low-priority-fixes-design.md  2026-03-13-low-priority-fixes.md  2026-03-13-medium-priority-improvements-design.md  2026-03-13-medium-priority-improvements.md
patches/asupersync/: Cargo.toml  README.md
patches/pi_agent_rust/: Cargo.toml  README.md
sidecar/: audit.ts  connectors.test.ts  connectors.ts  keychain.test.ts  keychain.ts  package-lock.json  package.json  pnpm-lock.yaml  server.integration.test.ts  server.ts  skills.test.ts  skills.ts  validation.test.ts  vendor.d.ts  vitest.integration.config.ts
sidecar/extensions/: ai-labelling.ts  claude-tool.ts  (+2 more)
src/: App.tsx  ConnectorsPage.tsx  InboxPage.tsx  MarkdownMessage.tsx  SettingsModal.tsx  SettingsPage.tsx  SkillsPage.tsx  config.ts  index.css  types.ts
src-tauri/: ARCHITECTURE.md  Cargo.toml  DOCUMENTATION_INDEX.md  Info.plist  PHASE_3_ARCHITECTURE.md  PHASE_3_FINAL.md  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: performance_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/server/: agent.rs  agent_executor.rs  agent_tests.rs  approval.rs  audit.rs  audit_tests.rs  clipboard.rs  db.rs  errors.rs  extensions.rs  files.rs  keychain.rs  logging.rs  mcp.rs  mod.rs  models.rs  notifications.rs  oauth.rs  plugins.rs  processes.rs  providers.rs  queries.rs  sandbox.rs  sessions.rs  settings.rs  skills.rs  static_files.rs  streaming.rs  tools.rs  ws.rs
src-tauri/tests/: api_integration_tests.rs  integration_e2e.rs  load_tests.rs
(+376 files in other folders)
