[package]
name = "workwithme"
version = "0.1.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "workwithme_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

# HTTP server and async runtime
axum = { version = "0.8", features = ["ws", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
futures = "0.3"
async-stream = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

# File/directory operations
walkdir = "2"

# Cryptography and security
keyring = "3"

# Logging and time
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Static asset embedding
rust-embed = { version = "8", features = ["compression"] }

# Phase 6 dependencies
arboard = "3"
notify-rust = "4"
dirs = "5"

# Phase 7 dependencies
lazy_static = "1.4"

# Phase 9 dependencies
oauth2 = "5"
urlencoding = "2"
base64 = "0.21"
rand = "0.8"

# Core agent runtime
pi_agent_rust = "0.1"
anyhow = "1"
toml = "0.8"

# Rate limiting and DoS protection
governor = "0.6"

# Phase 3 dependencies
async-trait = "0.1"

[patch.crates-io]
asupersync = { path = "../patches/asupersync" }
pi_agent_rust = { path = "../patches/pi_agent_rust" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
